// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Shift-reset > multiple shifts within reset > invoking continuations 1`] = `
{
  "constraints": [
    "Num ~~ ?4",
    "?2 ~~ ?3",
    "?4 ~~ Num",
    "Num ~~ ?6",
    "?2 ~~ ?3",
    "?6 ~~ Num",
    "Num ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num
?6 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "10",
      ],
      "7": [
        "20",
      ],
    },
  },
  "term": "let test
  : Num
  = reset |FFI.$add bubble#1328 (shift (λ($k: Π($k: Num) -> Num) -> $k 10))
    bubble#1339 (shift (λ($k: Π($k: Num) -> Num) -> $k 20))|",
  "type": "Num",
}
`;

exports[`Shift-reset > multiple shifts within reset > multiple shifts and multiple resumptions 1`] = `
{
  "constraints": [
    "Num ~~ Num",
    "Num ~~ ?4",
    "?2 ~~ ?3",
    "?4 ~~ Num",
    "Num ~~ Num",
    "Num ~~ ?6",
    "?2 ~~ ?3",
    "?6 ~~ Num",
    "Num ~~ Num",
    "Num ~~ ?8",
    "?2 ~~ ?8",
    "?2 ~~ ?3",
    "?8 ~~ Num",
    "Num ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num
?6 |=> Num
?8 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "3",
      ],
      "7": [
        "2",
      ],
      "9": [
        "L1 1",
        "1",
      ],
    },
  },
  "term": "let test
  : Num
  = reset |FFI.$add
    (FFI.$add
      (FFI.$add 4 bubble#1332 (shift (λ($k: Π($k: Num) -> Num) -> $k 3)))
      bubble#1344 (shift (λ($k: Π($k: Num) -> Num) -> $k 2)))
    bubble#1358 (shift (λ($k: Π($k: Num) -> Num) -> $k ($k 1)))|",
  "type": "Num",
}
`;

exports[`Shift-reset > only one shift within reset > invoking id continuation 1`] = `
{
  "constraints": [
    "String ~~ ?4",
    "?2 ~~ ?3",
    "?4 ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> String
?2 |=> String
?3 |=> String
?4 |=> String",
  "state": {
    "nondeterminism": {
      "5": [
        ""hello"",
      ],
    },
  },
  "term": "let test
  : String
  = reset |bubble#1327 (shift (λ($k: Π($k: String) -> String) -> $k "hello"))|",
  "type": "String",
}
`;

exports[`Shift-reset > only one shift within reset > invoking simple continuation with proper value 1`] = `
{
  "constraints": [
    "Num ~~ Num",
    "Num ~~ ?4",
    "?2 ~~ ?3",
    "?4 ~~ Num",
    "Num ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "1",
      ],
    },
  },
  "term": "let test
  : Num
  = reset |FFI.$add 1 bubble#1330 (shift (λ($k: Π($k: Num) -> Num) -> $k 1))|",
  "type": "Num",
}
`;

exports[`Shift-reset > only one shift within reset > multiple resumptions 1`] = `
{
  "constraints": [
    "Num ~~ ?4",
    "?2 ~~ Num",
    "Num ~~ ?4",
    "?2 ~~ Num",
    "Num ~~ ?3",
    "?4 ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "2",
        "1",
      ],
    },
  },
  "term": "let test
  : Num
  = reset |bubble#1333 (shift (λ($k: Π($k: Num) -> Num) ->
    FFI.$add ($k 1) ($k 2)))|",
  "type": "Num",
}
`;

exports[`Shift-reset > only one shift within reset > nested resumption 1`] = `
{
  "constraints": [
    "Num ~~ ?4",
    "?2 ~~ ?4",
    "?2 ~~ ?3",
    "?4 ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "L1 10",
        "10",
      ],
    },
  },
  "term": "let test
  : Num
  = reset |bubble#1329 (shift (λ($k: Π($k: Num) -> Num) -> $k ($k 10)))|",
  "type": "Num",
}
`;

exports[`Shift-reset > only one shift within reset > nested resumption with non-id continuation 1`] = `
{
  "constraints": [
    "Num ~~ Num",
    "Num ~~ ?4",
    "?2 ~~ ?4",
    "?2 ~~ ?3",
    "?4 ~~ Num",
    "Num ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "L1 10",
        "10",
      ],
    },
  },
  "term": "let test
  : Num
  = reset |FFI.$add 1
    bubble#1332 (shift (λ($k: Π($k: Num) -> Num) -> $k ($k 10)))|",
  "type": "Num",
}
`;

exports[`Shift-reset > only one shift within reset > not invoking continuation 1`] = `
{
  "constraints": [
    "String ~~ ?3",
    "?4 ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> String
?3 |=> String
?4 |=> ?2",
  "state": {
    "nondeterminism": {},
  },
  "term": "let test
  : String
  = reset |bubble#1325 (shift (λ($k: Π($k: ?2) -> ?2) -> "world"))|",
  "type": "String",
}
`;

exports[`Shift-reset > only one shift within reset > overriding continuation return type 1`] = `
{
  "constraints": [
    "Num ~~ Num",
    "String ~~ ?3",
    "?4 ~~ Num",
    "Num ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> String
?2 |=> Num
?3 |=> String
?4 |=> Num",
  "state": {
    "nondeterminism": {},
  },
  "term": "let test
  : String
  = reset |FFI.$add 1 bubble#1328 (shift (λ($k: Π($k: Num) -> Num) -> "hello"))|",
  "type": "String",
}
`;

exports[`Shift-reset > resets without shifts > literal value 1`] = `
{
  "constraints": [
    "Num ~~ ?2",
    "?2 ~~ ?3",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num",
  "state": {
    "nondeterminism": {},
  },
  "term": "let test : Num = reset |10|",
  "type": "Num",
}
`;

exports[`Shift-reset > resumption of dependent continuation > resuming continuation with dependent type 1`] = `
{
  "constraints": [
    "Type ~~ Type",
    "Num ~~ Num",
    "Type ~~ Type",
    "?3 ~~ Num",
    "Type ~~ Type",
    "Type ~~ Type",
    "Num ~~ Num",
    "Num ~~ Num",
    "?5 ~~ Num",
    "String ~~ String",
    "Num ~~ ?9",
    "?7 ~~ ?8",
    "?9 ~~ Num",
    "(λ($scrutinee: Any) ->
  (closure: match $scrutinee
    | 0 -> Num
    | _ -> String -| Γ: $scrutinee; x; test))
  ?1348 ~~ ?7",
    "?8 ~~ ?6",
    "Unit ~~ ?1",
  ],
  "solution": "?1 |=> Unit
?3 |=> Num
?5 |=> Num
?6 |=> (λ($scrutinee: Any) ->
  (closure: match $scrutinee
    | 0 -> Num
    | _ -> String -| Γ: $scrutinee; $scrutinee; $scrutinee; x; test))
  ?1348
?7 |=> (λ($scrutinee: Any) ->
  (closure: match $scrutinee
    | 0 -> Num
    | _ -> String -| Γ: $scrutinee; $scrutinee; x; test))
  ?1348
?8 |=> (λ($scrutinee: Any) ->
  (closure: match $scrutinee
    | 0 -> Num
    | _ -> String -| Γ: $scrutinee; $scrutinee; x; test))
  ?1348
?9 |=> Num",
  "state": {
    "nondeterminism": {
      "10": [
        "10",
      ],
    },
  },
  "term": "let test
  : Unit
  = {
    let f
      : Π(x: Num) -> (closure: match x | 0 -> Num | _ -> String -| Γ: x; test)
      = λ(x: Num) -> match x | 0 -> 0 | _ -> "hello";
    let foo
      : (λ($scrutinee: Any) ->
        (closure: match $scrutinee
          | 0 -> Num
          | _ -> String -| Γ: $scrutinee; $scrutinee; $scrutinee; x; test))
        ?1348
      = reset |f
        bubble#1348 (shift (λ($k: Π($k: Num) ->
          (λ($scrutinee: Any) ->
            (closure: match $scrutinee
              | 0 -> Num
              | _ -> String -| Γ: $scrutinee; $scrutinee; x; test))
            ?1348) ->
          $k 10))|;
    return unit;
  }",
  "type": "Unit",
}
`;
